Matrix size and multiplication records.